# PyCasMap

./: .gitignore  LICENSE  README.md  parallel_test.py  parallel_test_6plex.py  pyproject.toml  setup.py  test_build_command.py  test_plexity.py
.github/workflows/: pytest.yml
examples/: README.md
examples/3plex/: constants.txt  spacers.txt
examples/4plex/: constants.txt  spacers.txt
examples/6plex/: constants.txt  spacers.txt
pycasmap/: __init__.py  __main__.py  core.py
tests/: test_3plex_logic.py  test_build_command.py  test_core.py  test_plexity.py  test_spacers_command.py
