[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycasmap"
version = "0.1.0"
description = "Flexible Python Implementation of CasMap supporting 3-10plex constructs"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Zoe Chen", email = "zoechen0717@gmail.com"}
]
maintainers = [
    {name = "Zoe Chen", email = "zoechen0717@gmail.com"}
]
keywords = ["bioinformatics", "crispr", "casmap", "sequencing", "analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.7"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
]

[project.urls]
Homepage = "https://github.com/zoechen0717/PyCasMap"
Documentation = "https://github.com/zoechen0717/PyCasMap#readme"
Repository = "https://github.com/zoechen0717/PyCasMap"
"Bug Tracker" = "https://github.com/zoechen0717/PyCasMap/issues"

[project.scripts]
pycasmap = "pycasmap.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pycasmap*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 